<resources>
    <string name="app_name">AD2019_02_16</string>
    <string name="hometasks">ДОМАШНИЕ ЗАДАНИЯ</string>

    <string name="austria">Австрия</string>
    <string name="poland">Польша</string>
    <string name="italy">Италия</string>
    <string name="columbia">Колумбия</string>
    <string name="madagasсar">Мадагаскар</string>
    <string name="thailand">Таиланд</string>
    <string name="denmark">Дания</string>
    <string name="textview_1">TextView 1</string>
    <string name="textview_2">TextView_2</string>
    <string name="invert">Invert</string>

    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="forgot_your_username_password"><u>Forgot your username/password?</u></string>
    <string name="create_account">Create account</string>
    <string name="cd_app_and_company_logo">App and Company logo</string>

    <string name="url">URL</string>
    <string name="downloader_button">Download</string>
    <string name="img">IMG</string>
    <string name="logo">LOGO</string>
    <string name="downloader">DOWNLOADER</string>

    <string name="next">next</string>
    <string name="owl_image_view">owl</string>
    <string name="get_state">Проверить подключение</string>
    <string name="wifi_is_on">WiFi включен</string>
    <string name="wifi_is_off">WiFi выключен</string>


</resources>
