<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginTop="50dp">

        <ImageView
            android:contentDescription="@string/cd_app_and_company_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:src="@drawable/login_logo" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/LoginEditText"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_login_name"
            android:cursorVisible="false"
            android:drawablePadding="5dp"
            android:inputType="textEmailAddress"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/LoginEditText"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:drawableLeft="@drawable/ic_login_password"
            android:cursorVisible="false"
            android:drawablePadding="5dp"
            tools:ignore="RtlHardcoded" />


        <Button
            android:id="@+id/buttonPrimary"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/login"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_username_password"
            android:textColor="@color/textPrimary"
            android:gravity="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/buttonSecond"
            style="@style/ButtonSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/create_account" />
    </LinearLayout>
</FrameLayout>


